--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,8 +1,5 @@
-<%= @tweet.content %>
-
-<form action="/tweets/<%= @tweet.id %>" method="post">
-  <input id="hidden" type="hidden" name="_method" value="patch">
-  <label for="content">Content</label>
-  <input type="text" name="content">
-  <input type="submit" value="submit">
+<h2>Add a tweet</h2>
+<form action="/tweets" method="POST">
+  <p>Status: <input type="text" name="content"></p>
+  <input class="btn btn-primary" type="submit" value="submit">
 </form>
