--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,4 @@
-<h2>Add a tweet</h2>
+<h2>New Tweet</h2>
 <form action="/tweets" method="POST">
   <p>Status: <input type="text" name="content"></p>
   <input class="btn btn-primary" type="submit" value="submit">
