--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,4 @@
-<p> Welcome, <%= current_user.username %>
+<h1> Welcome, <%= current_user.username %></h1>
 <h2> Tweets </h2>
 
 <% @tweets.each do |tweet| %>
