--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,6 @@
-<form action="/logout" method="post">
-  Logout?
-  <input type="submit" name="logout" >
-</form>
+<p> Here are your tweets, <%= @user.username %></p>
+<% @user.tweets.each do |tweet| %>
+  <div>
+    <%= tweet.content %>
+  </div>
+<% end %>
